@@ -1,5 +1,15 @@
 2007-07-16  Sam Weinig  <sam@webkit.org>
 
+        Reviewed by Darin.
+
+        Add all the window's functions to cross-frame-access-put.html test.
+
+        * http/tests/security/cross-frame-access-put-expected.txt:
+        * http/tests/security/cross-frame-access-put.html:
+        * http/tests/security/resources/cross-frame-iframe-for-put-test.html:
+
+2007-07-16  Sam Weinig  <sam@webkit.org>
+
         Reviewed by Kevin McCullough.
 
         Breakup http/tests/security/cross-frame-access.html into multiple tests to
